{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 31,
  "lineage": "f8b6cab4-44a9-2b18-8238-f1fd321cf1b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "api-tajuddinmunshi-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:355412832925:loadbalancer/api-tajuddinmunshi-com-vvp16n",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b",
              "eu-west-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "api-tajuddinmunshi-com-vvp16n-856599814.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "SSL:443",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "api-tajuddinmunshi-com-vvp16n",
            "idle_timeout": 300,
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "TCP",
                "lb_port": 443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "api-tajuddinmunshi-com-vvp16n",
            "security_groups": [
              "sg-005cf78e464d96472",
              "sg-05272690314629f10"
            ],
            "source_security_group": "355412832925/dev_k8s_common_http",
            "source_security_group_id": "sg-005cf78e464d96472",
            "subnets": [
              "subnet-032a506f23b11947c",
              "subnet-038650217a19af8da",
              "subnet-0f83aaa78093386f3"
            ],
            "tags": {
              "KubernetesCluster": "tajuddinmunshi.com",
              "Name": "api.tajuddinmunshi.com",
              "kubernetes.io/cluster/tajuddinmunshi.com": "owned"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.api-elb-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-elb-tajuddinmunshi-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355412832925:security-group/sg-05272690314629f10",
            "description": "Security group for api ELB",
            "egress": [],
            "id": "sg-05272690314629f10",
            "ingress": [],
            "name": "api-elb.tajuddinmunshi.com",
            "name_prefix": null,
            "owner_id": "355412832925",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "tajuddinmunshi.com",
              "Name": "api-elb.tajuddinmunshi.com",
              "kubernetes.io/cluster/tajuddinmunshi.com": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0446a3317146482f8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "masters-tajuddinmunshi-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355412832925:security-group/sg-02846d99fd5de9a24",
            "description": "Security group for masters",
            "egress": [],
            "id": "sg-02846d99fd5de9a24",
            "ingress": [],
            "name": "masters.tajuddinmunshi.com",
            "name_prefix": null,
            "owner_id": "355412832925",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "tajuddinmunshi.com",
              "Name": "masters.tajuddinmunshi.com",
              "kubernetes.io/cluster/tajuddinmunshi.com": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0446a3317146482f8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes-tajuddinmunshi-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:355412832925:security-group/sg-01f862ceefb07ee81",
            "description": "Security group for nodes",
            "egress": [],
            "id": "sg-01f862ceefb07ee81",
            "ingress": [],
            "name": "nodes.tajuddinmunshi.com",
            "name_prefix": null,
            "owner_id": "355412832925",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "tajuddinmunshi.com",
              "Name": "nodes.tajuddinmunshi.com",
              "kubernetes.io/cluster/tajuddinmunshi.com": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0446a3317146482f8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2934723806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02846d99fd5de9a24",
            "self": false,
            "source_security_group_id": "sg-02846d99fd5de9a24",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3847557068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01f862ceefb07ee81",
            "self": false,
            "source_security_group_id": "sg-02846d99fd5de9a24",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-tajuddinmunshi-com",
            "aws_security_group.nodes-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-node-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2132217962",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01f862ceefb07ee81",
            "self": false,
            "source_security_group_id": "sg-01f862ceefb07ee81",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nodes-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api-elb-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3996370587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05272690314629f10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.api-elb-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-elb-to-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1921535264",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02846d99fd5de9a24",
            "self": false,
            "source_security_group_id": "sg-05272690314629f10",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.api-elb-tajuddinmunshi-com",
            "aws_security_group.masters-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2992699691",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02846d99fd5de9a24",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.masters-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2363897977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01f862ceefb07ee81",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.nodes-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-1-2379",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-3370545929",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02846d99fd5de9a24",
            "self": false,
            "source_security_group_id": "sg-01f862ceefb07ee81",
            "to_port": 2379,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-tajuddinmunshi-com",
            "aws_security_group.nodes-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-2382-4000",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2382,
            "id": "sgrule-3286495203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02846d99fd5de9a24",
            "self": false,
            "source_security_group_id": "sg-01f862ceefb07ee81",
            "to_port": 4000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-tajuddinmunshi-com",
            "aws_security_group.nodes-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-4003-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4003,
            "id": "sgrule-1595009219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02846d99fd5de9a24",
            "self": false,
            "source_security_group_id": "sg-01f862ceefb07ee81",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-tajuddinmunshi-com",
            "aws_security_group.nodes-tajuddinmunshi-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-udp-1-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-2192438025",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-02846d99fd5de9a24",
            "self": false,
            "source_security_group_id": "sg-01f862ceefb07ee81",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-tajuddinmunshi-com",
            "aws_security_group.nodes-tajuddinmunshi-com"
          ]
        }
      ]
    }
  ]
}